// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONSchemaViewer - corner cases CreateArray - sub properties as boolean schema 1`] = `
[
  <strong>
    type
  </strong>,
  " : ",
  <span
    style={
      {
        "opacity": "0.6",
      }
    }
  >
    array
  </span>,
  <ul>
    <li>
      <details
        open={false}
      >
        <summary>
          <code>
            items[0]
          </code>
           
          <strong>
            none
          </strong>
        </summary>
        <div>
          <div>
            <strong>
              type
            </strong>
             : 
            <strong>
              none
            </strong>
            <div
              style={
                {
                  "marginTop": "var(--ifm-table-cell-padding)",
                }
              }
            >
              Always invalid
            </div>
          </div>
        </div>
      </details>
    </li>
  </ul>,
  <ul>
    <li>
      <details
        open={false}
      >
        <summary>
          <code>
            items[0]
          </code>
           
          <strong>
            none
          </strong>
        </summary>
        <div>
          <div>
            <strong>
              type
            </strong>
             : 
            <strong>
              none
            </strong>
            <div
              style={
                {
                  "marginTop": "var(--ifm-table-cell-padding)",
                }
              }
            >
              Always invalid
            </div>
          </div>
        </div>
      </details>
    </li>
  </ul>,
  <li>
    <details
      open={false}
    >
      <summary>
        <code>
          items[..., x, ...]
        </code>
         
        <strong>
          none
        </strong>
      </summary>
      <div>
        <div>
          <strong>
            type
          </strong>
           : 
          <strong>
            none
          </strong>
          <div
            style={
              {
                "marginTop": "var(--ifm-table-cell-padding)",
              }
            }
          >
            Always invalid
          </div>
        </div>
      </div>
    </details>
  </li>,
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  >
    <div>
      🚨 
      No extra item(s) are authorized in this array
    </div>
  </div>,
]
`;

exports[`JSONSchemaViewer - corner cases CreateNodes - boolean schema (false) 1`] = `
[
  <strong>
    type
  </strong>,
  " : ",
  <strong>
    none
  </strong>,
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  >
    Always invalid
  </div>,
]
`;

exports[`JSONSchemaViewer - corner cases CreateNodes - boolean schema (true) 1`] = `
[
  <strong>
    type
  </strong>,
  " : ",
  <strong>
    any
  </strong>,
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  >
    Always valid
  </div>,
]
`;

exports[`JSONSchemaViewer - corner cases CreateObject - missing pattern in propertyNames 1`] = `
[
  <strong>
    type
  </strong>,
  " : ",
  <span
    style={
      {
        "opacity": "0.6",
      }
    }
  >
    object
  </span>,
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  />,
]
`;

exports[`JSONSchemaViewer - corner cases CreateObject - sub properties as boolean schema 1`] = `
[
  <strong>
    type
  </strong>,
  " : ",
  <span
    style={
      {
        "opacity": "0.6",
      }
    }
  >
    object
  </span>,
  <ul>
    <li>
      <details
        open={false}
      >
        <summary>
          <code>
            property name*
          </code>
           
          <strong>
            none
          </strong>
        </summary>
        <div>
          <div>
            <strong>
              type
            </strong>
             : 
            <strong>
              none
            </strong>
            <div
              style={
                {
                  "marginTop": "var(--ifm-table-cell-padding)",
                }
              }
            >
              Always invalid
            </div>
          </div>
        </div>
      </details>
    </li>
  </ul>,
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  >
    <div>
      🚨 
      No extra propertie(s) are authorized in this object
    </div>
  </div>,
]
`;
